icondir = $(datadir)/icons/Wasp/scalable/stock
icon_DATA = \
        clipboard.svg \
	folder.svg \
	help_book.svg \
	disk-floppy.svg \
	filenew.svg \
	findreplace.svg \
	find.svg \
	home.svg \
	information.svg \
	checkmark.svg \
	navigation_down.svg \
	navigation_up.svg \
	navigation_left.svg \
	navigation_right.svg \
	navigation_reload.svg \
	navigation_stop.svg \
	print.svg \
	stickies.svg \
	stock_accessories.svg \
	stock_amusements.svg \
	stock_internet.svg \
	stock_lockscreen.svg \
	stock_multimedia.svg \
	stock_searchtool.svg \
	stock_dialog_info.svg \
	stock_logout.svg \
	stock_gnome-logo.svg \
	gaim_auth.svg \
	gaim_error.svg \
	gaim_info.svg \
	gaim_offline.svg \
	gaim_online.svg \
	stock_volume-0.svg \
	stock_volume-med.svg \
	stock_volume-mute.svg \
	stock_volume-max.svg \
	stock_volume-min.svg

EXTRA_DIST = $(icon_DATA)
